# janus

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MIGRATE_TO_GPUI.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: rdp-crash-debug.md  smoke-test.md
fixtures/: sample-mremoteng.xml
src/: api.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: lib.rs
src-tauri/crates/import_export/: Cargo.toml
src-tauri/crates/import_export/src/: lib.rs
src-tauri/crates/import_export/tests/: mremoteng.rs
src-tauri/crates/protocols/rdp/: Cargo.toml
src-tauri/crates/protocols/rdp/src/: com_interfaces.rs  dispatch_helpers.rs  event_sink.rs  frame_encode.rs  input.rs  launcher.rs  lib.rs  manager.rs  manager_stub.rs  ole_container.rs  session.rs  session_manager.rs  session_task.rs  sta_thread.rs  tls.rs
src-tauri/crates/protocols/ssh/: Cargo.toml
src-tauri/crates/protocols/ssh/src/: lib.rs
src-tauri/crates/secrets/: Cargo.toml
src-tauri/crates/secrets/src/: lib.rs
src-tauri/crates/secrets/tests/: vault.rs
src-tauri/crates/storage/: Cargo.toml
src-tauri/crates/storage/migrations/: 001_init.sql  002_ssh_known_hosts.sql
src-tauri/crates/storage/src/: lib.rs
src-tauri/crates/storage/tests/: storage_crud.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  host_keys.rs  main.rs  state.rs
src/app/: bootstrap.ts  connection-modal.ts  context-menu.ts  crud-modals.ts  icons.ts  modal.ts  protocols.ts  sftp.ts  shell.ts  status.ts  tabs.ts  tree.ts  types.ts  utils.ts
src/styles/: buttons.css  context-menu.css  forms.css  import-export.css  layout.css  modal.css  rdp.css  scrollbar.css  setup.css  sidebar.css  statusbar.css  tabs.css  theme.css  toolbar.css  tree.css  unlock.css  workspace.css
