[package]
name = "janus"
version = "0.2.0"
description = "Janus remote access desktop client"
authors = ["Daniel D'Angeli"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
janus-domain = { path = "crates/domain" }
janus-import-export = { path = "crates/import_export" }
janus-protocol-rdp = { path = "crates/protocols/rdp" }
janus-protocol-ssh = { path = "crates/protocols/ssh" }
janus-secrets = { path = "crates/secrets" }
janus-storage = { path = "crates/storage" }
russh-keys = "0.49"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.2", features = [] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
windows-core = "0.61.2"

[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/storage",
  "crates/secrets",
  "crates/protocols/ssh",
  "crates/protocols/rdp",
  "crates/import_export"
]
