[package]
name = "janus-secrets"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.43", features = ["serde"] }
janus-domain = { path = "../domain" }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["v4"] }
zeroize = "1.8.2"
