[package]
name = "janus-protocol-rdp"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
tokio = { version = "1.49.0", features = ["sync", "time", "rt"] }
tracing = "0.1"
uuid = { version = "1.21.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
] }
