[package]
name = "janus-protocol-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1"
russh = { version = "=0.54.1", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.1.1"
tokio = { version = "1.49.0", features = ["sync", "rt", "macros", "net", "time", "fs"] }
tracing = "0.1"
uuid = { version = "1.21.0", features = ["v4"] }
